--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Dough Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/ia-writer-duo@5.0.7/index.min.css"> to the head
 </head>
 <body>
     <div class="container">
-        <h1>Pizza Dough Calculator</h1>
+        <h1>🍕 Pizza Dough Calculator 🍕</h1>
         <label for="doughSize">Dough Ball Size (g):</label>
         <input type="number" id="doughSize"><br>
 
