mistakes were made

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div class="container">
         <h1>🍕 Pizza Dough Calculator</h1>
 
-        <label class="customize-label" for="customize">Customize:</label>
-        <input type="checkbox" id="customize" onchange="toggleCustomization()"><br>
+       <div class="customize-wrapper">
+            <label class="customize-label" for="customize">Customize:</label>
+            <input type="checkbox" id="customize" onchange="toggleCustomization()">
+        </div>
         
         <label for="doughSize">Dough Ball Size (g):</label>
         
