--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sips & Pies Dough Calculator 🍕</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/ia-writer-duo@5.0.7/index.min.css">
-    <link rel="stylesheet" href="styles.css"> {/* This links to your CSS file */}
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
     <div class="container">
@@ -36,6 +36,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script> {/* This links to your JavaScript file */}
+    <script src="script.js"></script> 
 </body>
 </html>
