--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <label for="numBalls">Number of Dough Balls:</label>
         <input type="number" id="numBalls" value="4"><br>
 
-        <label for="hydration">Hydration (%):</label>
+        <label for="hydration">Hydration %:</label>
         <input type="number" id="hydration" min="0" max="100" value="66"><br>
 
         <div id="customFields">
-            <label for="yeast">Yeast (% of total flour):</label> 
+            <label for="yeast">Yeast %:</label> 
             <input type="number" id="yeast" min="0" step="0.01" value="0.05"><br>
 
-            <label for="salt">Salt (% of total flour):</label>
+            <label for="salt">Salt %:</label>
             <input type="number" id="salt" min="0" step="0.1" value="2.7"><br>
         </div>
 
