--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sips & Pies Dough Calculator </title>
+    <title>Sips & Pies Dough Calculator 🍕</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍕</text></svg>">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/ia-writer-duo@5.0.7/index.min.css">
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Sips & Pies Dough Calculator </h1>
+        <h1>Sips & Pies Dough Calculator 🍕</h1>
 
         <label for="doughSize">Dough Ball Size (g):</label>
         <input type="number" id="doughSize" value="230"><br>
@@ -18,14 +18,14 @@
         <label for="numBalls">Number of Dough Balls:</label>
         <input type="number" id="numBalls" value="4"><br>
 
-        <label for="hydration">Hydration %:</label>
+        <label for="hydration">Hydration (%):</label>
         <input type="number" id="hydration" min="0" max="100" value="66"><br>
 
         <div id="customFields">
-            <label for="yeast">Yeast %:</label> 
+            <label for="yeast">Yeast (% of total flour):</label> 
             <input type="number" id="yeast" min="0" step="0.01" value="0.05"><br>
 
-            <label for="salt">Salt %:</label>
+            <label for="salt">Salt (% of total flour):</label>
             <input type="number" id="salt" min="0" step="0.1" value="2.7"><br>
         </div>
 
@@ -33,10 +33,10 @@
 
         <div id="results">
             <h2>Recipe Breakdown</h2>
-             <p style="text-align:center; color: #777;">Enter your dough parameters above and click "Calculate".</p>
+            <p style="text-align:center; color: #777;">Enter your dough parameters above and click "Calculate".</p>
         </div>
     </div>
 
-    <script src="script.js"></script> 
+    <script src="script.js"></script>
 </body>
 </html>
